PetProjects/salesAccounting/k8s/productDB-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-db
  template:
    metadata:
      labels:
        app: product-db
    spec:
      containers:
        - name: product-db
          image: salesaccounting/salesaccounting-productdb:latest
          ports:
            - containerPort: 8080
