PetProjects/salesAccounting/k8s/wholeSale-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whole-sale
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whole-sale
  template:
    metadata:
      labels:
        app: whole-sale
    spec:
      containers:
        - name: whole-sale
          image: salesaccounting/salesaccounting-wholesale:latest
          ports:
            - containerPort: 8081
