PetProjects/salesAccounting/k8s/productDB-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-db
spec:
  selector:
    app: product-db
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
