PetProjects/salesAccounting/k8s/wholeSale-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whole-sale
spec:
  selector:
    app: whole-sale
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
