PetProjects/salesAccounting/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: whole-sale
                port:
                  number: 80
          - path: /db
            pathType: Prefix
            backend:
              service:
                name: product-db
                port:
                  number: 80
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: eureka-server
                port:
                  number: 8761
